[gd_scene load_steps=8 format=3 uid="uid://bxi4vqt0fji1l"]

[ext_resource type="Script" path="res://characters/enemies/enemy.gd" id="1_8db2x"]
[ext_resource type="Texture2D" uid="uid://bkf3hflr4cwpa" path="res://assets/enemy/enemy.png" id="1_ueslf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_38uc2"]
size = Vector2(14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mbvl"]
atlas = ExtResource("1_ueslf")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iosq7"]
atlas = ExtResource("1_ueslf")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_27dwo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mbvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iosq7")
}],
"loop": true,
"name": &"idle",
"speed": 1.5
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ov7tj"]
size = Vector2(16, 16)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 6
script = ExtResource("1_8db2x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_38uc2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_27dwo")
animation = &"idle"
frame_progress = 0.428668

[node name="IsOnFloor" type="RayCast2D" parent="."]
position = Vector2(8, 16)
target_position = Vector2(0, 6)
collision_mask = 14

[node name="BasicRay" type="RayCast2D" parent="." groups=["enemy"]]
position = Vector2(8, 8)
target_position = Vector2(0, 8)
collision_mask = 7

[node name="Demage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Demage"]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_ov7tj")

[connection signal="body_entered" from="Demage" to="." method="_on_demage_body_entered"]
